--- a/server/config.ini
+++ b/server/config.ini
@@ -1,6 +1,6 @@
 [arduino]
 params = 1
-port = /dev/ttyUSB0
+port = /dev/ttyUSB1
 
 baudrate = 9600
 pause = 1
@@ -12,3 +12,6 @@ max_weight = 10
 start = 0
 end = 100
 house_number = 12A
+
+[excel]
+path = /home/jabka/python/arduin_docker/
